--- a/src/pages/Auth/Auth.scss
+++ b/src/pages/Auth/Auth.scss
@@ -5,7 +5,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        margin-top: 100px;
+        margin-top: 200px;
 
         form {
             max-width: 400px;
@@ -13,6 +13,7 @@
             display: flex;
             flex-direction: column;
             width: 100%;
+            margin-bottom: 20px;
             
             label {
                 color: #333;
@@ -50,6 +51,7 @@
                 background-color: #000;
                 color: #fff;
                 border-radius: 5px;
+                cursor: pointer;
             }
         }
     }
