--- a/src/pages/Signup/Signup.scss
+++ b/src/pages/Signup/Signup.scss
@@ -5,7 +5,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        margin-top: 100px;
+        margin-top: 200px;
         
         form {
             max-width: 400px;
@@ -50,6 +50,7 @@
                 background-color: #000;
                 color: #fff;
                 border-radius: 5px;
+                cursor: pointer;
             }
         }
     }
