fixed some bugs

--- a/src/components/Layout/Sidebar/Sidebar.scss
+++ b/src/components/Layout/Sidebar/Sidebar.scss
@@ -11,6 +11,7 @@
       align-items: center;
       gap: 10px;
       padding: 20px;
+      position: relative;
 
       svg {
         width: 25px;
@@ -27,6 +28,24 @@
         border: none;
         border-radius: 5px;
         background-color: #f2f2f2;
+        position: relative;
+        &::placeholder {
+          font-feature-settings: "clig" off, "liga" off;
+          font-size: 13px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 120%;
+          opacity: 0.3;
+          text-align: center;
+        }
+      }
+
+      .icon {
+        width: 15px;
+        height: 15px;
+        position: absolute;
+        left: 160px;
+        opacity: 0.3;
       }
     }
 
