--- a/src/components/Layout/EmptyChat/EmptyChat.scss
+++ b/src/components/Layout/EmptyChat/EmptyChat.scss
@@ -4,5 +4,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        height: 100vh;
+
+        span {
+           
+        }
     }
 }
