--- a/src/components/Layout/Header/Header.scss
+++ b/src/components/Layout/Header/Header.scss
@@ -5,6 +5,8 @@
     border-bottom: 1px solid #d5d5d8;
     background-color: #fff;
     padding: 0 16px;
+    position: sticky;
+    top: 0;
     .header__container {
         display: flex;
         align-items: center;
